<resources>
    <string name="app_name">SegurSys</string>
    <string name="user">Usuário:</string>
    <string name="senha">Senha:</string>
    <string name="entrar">Entrar</string>
    <string name="mostrar_senha">Mostrar Senha</string>
    <string name="pr_ximo_ponto">Próximo Ponto:</string>
    <string name="nomeponto">Próximo Ponto</string>
    <string name="ocorr_ncia">Ocorrência</string>
    <string name="op_es">Opções</string>
    <string name="escala">Escala</string>
    <string name="ler_ponto">Ler Ponto</string>
    <string name="alterar_senha">Alterar Senha</string>
    <string name="nova_senha">Nova Senha:</string>
    <string name="confirmar_nova_senha">Confirmar Nova Senha:</string>
    <string name="confirmar">Confirmar</string>
    <string name="ocorr_nciaaaa">Acontecimento:*</string>
    <string name="data">Data:*</string>
    <string name="horario_de_inicio">Horario de Inicio:*</string>
    <string name="horario_de_fim">Horario de Fim:</string>
    <string name="continuar">Registrar</string>
    <string name="prompt_oco">Escolha um Acontecimento</string>
    <string name="nivel_da_ocorr_ncia">Nivel da Ocorrência:*</string>
    <string name="status_da_ocorr_ncia">Status da Ocorrência:*</string>
    <string name="title_activity_lista_config">ListaConfigActivity</string>
    <string name="digite_a_nova_senha">Digite a nova senha:</string>
    <string name="diasemana">diaSemana</string>
    <string name="de">De:</string>
    <string name="horariocomeco">horarioComeco</string>
    <string name="at">Até:</string>
    <string name="horariotermino">horarioTermino</string>
    <string-array name="acontecimentos">
        <item>Roubo</item>
        <item>Invasão</item>
        <item>Outros</item>
    </string-array>
    <string-array name="niveis">
        <item>Baixo</item>
        <item>Médio</item>
        <item>Alto</item>
    </string-array>
    <string-array name="status">
        <item>Solucionado</item>
        <item>Em Aberto</item>
        <item>Encaminhado para a Policia</item>
    </string-array>
</resources>
