<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/lblListarLayoutDia"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/diasemana"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblDe"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/de"
            android:textColor="@color/preto_true"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/lblListarLayoutComeco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:text="@string/horariocomeco"
            android:textColor="@color/preto_true"
            android:textSize="22sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblAte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/at"
            android:textColor="@color/preto_true"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/lblListarLayoutFim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:baselineAligned="false"
            android:text="@string/horariotermino"
            android:textColor="@color/preto_true"
            android:textSize="22sp" />

    </LinearLayout>

</LinearLayout>
