<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fundo"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/lblUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="444dp"
        android:layout_marginEnd="304dp"
        android:layout_marginRight="304dp"
        android:text="@string/user"
        android:textColor="@color/preto_true"
        android:textSize="24sp"
        android:theme="@style/Label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/lblSenha"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginBottom="328dp"
        android:layout_marginEnd="320dp"
        android:layout_marginRight="320dp"
        android:text="@string/senha"
        android:textColor="@color/preto_true"
        android:textSize="24sp"
        android:theme="@style/Label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/txtUsuario"
        android:layout_width="358dp"
        android:layout_height="50dp"
        android:layout_marginBottom="380dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="50"
        android:textColor="@color/preto_true"
        android:theme="@style/EditTextTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/txtSenha"
        android:layout_width="361dp"
        android:layout_height="47dp"
        android:layout_marginBottom="268dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:inputType="textPassword"
        android:maxLength="16"
        android:textColor="@color/preto_true"
        android:theme="@style/EditTextTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="174dp"
        android:layout_height="52dp"
        android:layout_marginBottom="68dp"
        android:layout_marginEnd="116dp"
        android:layout_marginRight="116dp"
        android:background="@drawable/fundo_botao"
        android:text="@string/entrar"
        android:textColor="@color/branco"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <CheckBox
        android:id="@+id/ckShow"
        android:layout_width="203dp"
        android:layout_height="51dp"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="192dp"
        android:layout_marginRight="192dp"
        android:text="@string/mostrar_senha"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btnEntrar"
        android:theme="@style/CheckBox"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="308dp"
        android:layout_height="291dp"
        android:layout_marginBottom="404dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logo" />

</android.support.constraint.ConstraintLayout>