<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarSize="3sp"
        android:scrollbarThumbVertical="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/ocorr_nciaaaa"
                android:textColor="@color/preto_true"
                android:textSize="26sp"
                android:theme="@style/Label" />

            <Spinner
                android:id="@+id/spnAcontecimentos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:entries="@array/acontecimentos" />

            <EditText
                android:id="@+id/txtOco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:ems="10"
                android:inputType="textMultiLine"
                android:textSize="24sp"
                android:theme="@style/EditTextTheme"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/div1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/div" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/data"
                android:textColor="@color/preto_true"
                android:textSize="26sp"
                android:theme="@style/Label" />

            <EditText
                android:id="@+id/txtData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:ems="10"
                android:focusable="false"
                android:inputType="textPersonName"
                android:textSize="24sp"
                android:theme="@style/EditTextTheme" />

            <ImageView
                android:id="@+id/div2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/div" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/horario_de_inicio"
                android:textColor="@color/preto_true"
                android:textSize="26sp"
                android:theme="@style/Label" />

            <EditText
                android:id="@+id/txtHoraInicio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:ems="10"
                android:focusable="false"
                android:inputType="textPersonName"
                android:textSize="24sp"
                android:theme="@style/EditTextTheme" />

            <ImageView
                android:id="@+id/div3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/div" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/horario_de_fim"
                android:textColor="@color/preto_true"
                android:textSize="26sp"
                android:theme="@style/Label" />

            <EditText
                android:id="@+id/txtHoraFim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="false"
                android:inputType="textPersonName"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/div4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/div" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/nivel_da_ocorr_ncia"
                android:textColor="@color/preto_true"
                android:textSize="26sp"
                android:theme="@style/Label" />

            <Spinner
                android:id="@+id/spnNiveis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:entries="@array/niveis" />

            <ImageView
                android:id="@+id/div5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/div" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/status_da_ocorr_ncia"
                android:textColor="@color/preto_true"
                android:textSize="26sp"
                android:theme="@style/Label" />

            <Spinner
                android:id="@+id/spnStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:entries="@array/status" />

            <ImageView
                android:id="@+id/div6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/div" />

            <TextView
                android:id="@+id/lblArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="Area:*"
                android:textColor="@color/preto_true"
                android:textSize="26sp"
                android:theme="@style/Label" />

            <Spinner
                android:id="@+id/spnArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp" />

            <Button
                android:id="@+id/btnRegistrarOcorrencia"
                android:layout_width="198dp"
                android:layout_height="45dp"
                android:layout_marginBottom="25dp"
                android:layout_marginLeft="90dp"
                android:layout_marginStart="90dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/fundo_botao"
                android:text="@string/continuar"
                android:textColor="@color/branco"
                android:textSize="24sp" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>
