<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">


    <ImageView
        android:id="@+id/imgConfig"
        android:layout_width="204dp"
        android:layout_height="235dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:adjustViewBounds="true"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/cinza_claro" />

    <ImageView
        android:id="@+id/imgQr"
        android:layout_width="204dp"
        android:layout_height="235dp"
        android:layout_marginBottom="239dp"
        android:layout_marginEnd="206dp"
        android:layout_marginRight="206dp"
        android:adjustViewBounds="true"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/cinza_claro" />

    <ImageView
        android:id="@+id/imgEscala"
        android:layout_width="204dp"
        android:layout_height="235dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="206dp"
        android:layout_marginRight="206dp"
        android:adjustViewBounds="true"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/cinza_escuro" />

    <ImageView
        android:id="@+id/imgOco"
        android:layout_width="204dp"
        android:layout_height="235dp"
        android:layout_marginBottom="239dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:adjustViewBounds="true"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/cinza_escuro" />

    <TextView
        android:id="@+id/lblNomePonto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/nomeponto"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/imgQr"
        app:layout_constraintStart_toEndOf="@+id/lblNext" />

    <TextView
        android:id="@+id/lblNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp"
        android:text="@string/pr_ximo_ponto"
        android:textColor="@android:color/background_dark"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/imgQr"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lblOco"
        android:layout_width="145dp"
        android:layout_height="28dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="44dp"
        android:layout_marginStart="44dp"
        android:text="@string/ocorr_ncia"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/imgEscala"
        app:layout_constraintStart_toEndOf="@+id/imgQr" />

    <TextView
        android:id="@+id/lblConfig"
        android:layout_width="89dp"
        android:layout_height="33dp"
        android:layout_marginLeft="56dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="200dp"
        android:text="@string/op_es"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/imgEscala"
        app:layout_constraintTop_toBottomOf="@+id/imgOco" />

    <TextView
        android:id="@+id/lblEscala"
        android:layout_width="87dp"
        android:layout_height="30dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="204dp"
        android:text="@string/escala"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/imgConfig"
        app:layout_constraintTop_toBottomOf="@+id/imgOco" />

    <TextView
        android:id="@+id/lblQr"
        android:layout_width="125dp"
        android:layout_height="29dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="76dp"
        android:layout_marginRight="76dp"
        android:text="@string/ler_ponto"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/imgConfig"
        app:layout_constraintEnd_toStartOf="@+id/lblOco" />

    <ImageView
        android:id="@+id/imgIconQr"
        android:layout_width="178dp"
        android:layout_height="178dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        app:layout_constraintBottom_toTopOf="@+id/lblOco"
        app:layout_constraintEnd_toStartOf="@+id/imgOco"
        app:srcCompat="@drawable/qr_code" />

    <ImageView
        android:id="@+id/imgIconConfig"
        android:layout_width="178dp"
        android:layout_height="178dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        app:layout_constraintBottom_toTopOf="@+id/lblEscala"
        app:layout_constraintStart_toEndOf="@+id/imgEscala"
        app:srcCompat="@drawable/ajustes" />

    <ImageView
        android:id="@+id/imgIconEscala"
        android:layout_width="178dp"
        android:layout_height="178dp"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgQr"
        app:srcCompat="@drawable/escala" />

    <ImageView
        android:id="@+id/imgIconOco"
        android:layout_width="178dp"
        android:layout_height="178dp"
        android:layout_marginBottom="44dp"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        app:layout_constraintBottom_toTopOf="@+id/imgEscala"
        app:layout_constraintStart_toEndOf="@+id/imgQr"
        app:srcCompat="@drawable/ocorrencia" />
</android.support.constraint.ConstraintLayout>